# hofa

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  environment.yml  full-environment.yml  pyproject.toml  requirements-full.txt  requirements.txt
docs/source/: citing_hofa.rst  conf.py  index.rst  license.rst
docs/source/_static/: LICENSE  README.md  custom.css  footer.css
docs/source/_static/mathjax/: README.md
docs/source/_templates/: footer_funders.html  footer_license.html
docs/source/developers_guide/: for_developers.rst
docs/source/getting_started/: beginner_installation.rst  first_tutorial.rst  getting_started_index.rst  installation.rst  quick_intro.rst
docs/source/tutorials/: Tutorial_Denoising.ipynb  Tutorial_First_encounter.ipynb  Tutorial_higher_order_characters.ipynb
docs/source/user_guide/: conceptual_background.rst  theoretical_foundations_extensions.rst  tutorial_denoising.rst  tutorial_high_order_characters.rst  user_guide_index.rst
src/hofa/: __init__.py  cdf.py  char.py  norm.py  rgz.py
